fix legibility of text

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-  font-weight: 200;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  /* font-weight: 200; */
 }
 
 html {
@@ -14,7 +15,9 @@ body {
   padding-top: 60px;
 }
 
-p, h1, h2 {
+p,
+h1,
+h2 {
   max-width: 80%;
   margin-left: auto;
   margin-right: auto;
@@ -30,9 +33,9 @@ h2 {
 }
 
 p {
-  line-height: 24px;
+  line-height: 36px;
   font-size: 18px;
-  text-align: justify;
+  /* text-align: justify; */
 }
 
 a {
